# shy-raccoon

./: README.md  env.sample  setup.cfg  shy-raccoon.service
shyraccoon/: cli.py  main.py  settings.py
tests/: test_main.py
