[metadata]
name = shy-raccoon
version = 0.1
author = Agate Blue
author_email = me@agate.blue
long_description = file: README.md

[options]
zip_safe = True
packages = find:
install_requires = 
    click~=8.1
    requests~=2.31.0

[options.extras_require]
dev = 
    pytest~=7.3.1
    pytest-env~=1.0.1
    requests-mock~=1.11.0

[tool:pytest]
env =
    ACCESS_TOKEN=faketoken
    SERVER_URL=https://hello.devserver

[options.entry_points]
console_scripts =
	shy-raccoon = shyraccoon.cli:cli

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1